[A] added spawn count multiplier with per-tier defaults and toggle [C] nested allow flags into config subsections for improved readability [C] updated used server version to 2026.02.17-255364b8e [C] reformatted and cleaned up codebase [C] updated README [C] bumped version to 1.1.2

--- a/src/main/resources/difficultys/very_easy.json
+++ b/src/main/resources/difficultys/very_easy.json
@@ -1,27 +1,28 @@
 {
-    "id": "very_easy",
-    "order": 1,
-    "meta": {
-        "displayName": "Very Easy",
-        "description": "HP x0.827, Eingehender DMG x0.7, Gegner-Rüstung: aus, XP x0.9, Cash x0.9, Loot: Rate x0.9, Menge x0.9.",
-        "color": "#CFCFCF",
-        "imagePath": "Images/Difficulty/very_easy.png",
-        "iconPath": "Images/Difficulty/very_easy@icon.png",
-        "killFeedPrefix": "[{tier}] ",
-        "chatPrefix": "[{tier}] "
-    },
-    "is_allowed": true,
-    "is_hidden": false,
-    "health_multiplier": 0.827,
-    "damage_multiplier": 0.7,
-    "armor_multiplier": 0.0,
-    "drop_rate_multiplier": 0.9,
-    "drop_quantity_multiplier": 0.9,
-    "drop_quality_multiplier": 0.0,
-    "xp_multiplier": 0.9,
-    "cash_multiplier": 0.9,
-    "elite_mobs_chance_multiplier": 0,
-    "elite_mobs_chance_uncommon": 0.0,
-    "elite_mobs_chance_rare": 0.0,
-    "elite_mobs_chance_legendary": 0.0
+	"id": "very_easy",
+	"order": 1,
+	"meta": {
+		"displayName": "Very Easy",
+		"description": "HP x0.827, Eingehender DMG x0.7, Gegner-Rüstung: aus, XP x0.9, Cash x0.9, Loot: Rate x0.9, Menge x0.9.",
+		"color": "#CFCFCF",
+		"imagePath": "Images/Difficulty/very_easy.png",
+		"iconPath": "Images/Difficulty/very_easy@icon.png",
+		"killFeedPrefix": "[{tier}] ",
+		"chatPrefix": "[{tier}] "
+	},
+	"is_allowed": true,
+	"is_hidden": false,
+	"health_multiplier": 0.827,
+	"damage_multiplier": 0.7,
+	"armor_multiplier": 0.0,
+	"drop_rate_multiplier": 0.9,
+	"drop_quantity_multiplier": 0.9,
+	"spawn_count_multiplier": 0.2,
+	"drop_quality_multiplier": 0.0,
+	"xp_multiplier": 0.9,
+	"cash_multiplier": 0.9,
+	"elite_mobs_chance_multiplier": 0,
+	"elite_mobs_chance_uncommon": 0.0,
+	"elite_mobs_chance_rare": 0.0,
+	"elite_mobs_chance_legendary": 0.0
 }
